Mise a jour du backend et ajout du guide Swagger